# se-toolkit-lab-8

./: LAB8_SUMMARY.md  REPORT.md  docker-compose.yml  pyproject.toml
backend/src/lms_backend/routers/: items.py
lab/tasks/required/: task-2.md
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  server.py  settings.py
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot/config/: config.resolved.json
nanobot/workspace/cron/: jobs.json
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
